--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="container-fluid">
 		<header class="row ">
-			<nav class="nav__bg">
+			<nav class="nav-bg">
 				<div class="container d-flex">
 					<div class="col-11 col-sm-6"> 
 						<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
@@ -31,7 +31,17 @@
 				</div>
 			</nav>
 		</header>
-		
+		<section class="row">
+			<div class="bg-banner">
+				<div class="container d-flex flex-column  align-items-center my-4">
+					<div class="img-test"></div>
+					<div class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</div>
+					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
+				
+				</div>
+			</div>
+		</section>
 		</div>
 	</div>
 </body>
