--- a/index.html
+++ b/index.html
@@ -35,13 +35,39 @@
 			<div class="bg-banner">
 				<div class="container d-flex flex-column  align-items-center my-4">
 					<div class="img-test"></div>
-					<div class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</div>
+					<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
 					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
 					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
 				
 				</div>
 			</div>
 		</section>
+		<main class="row">
+			<div class="container d-flex flex-wrap  justify-content-center  my-4">
+				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+			
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+			</div>
+		</main>
+		
 		</div>
 	</div>
 </body>
