--- a/index.html
+++ b/index.html
@@ -67,7 +67,19 @@
 				</div>
 			</div>
 		</main>
-		
+			<section class="row">
+				<div class="bg-banner">
+					<div class="container">
+						<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+						<div class="row">
+							<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptate quas, quos laboriosam dolor qui ad esse rem id, nihil voluptatum, a expedita dicta ratione consectetur doloremque vitae eius autem? </div>
+							<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
+						</div>
+						<a class="d-flex justify-content-center" href="">Download</a>
+					</div>
+				</div>
+			</section>
 		</div>
 	</div>
 </body>
