--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
+	< class="container-fluid">
 		<header class="row ">
 			<nav class="nav-bg">
 				<div class="container d-flex">
@@ -80,7 +80,34 @@
 					</div>
 				</div>
 			</section>
-		</div>
+			<section class="row">
+				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+				<div class="input-test">content</div>
+				<a class="" href="">Download</a>
+			</section>
+			<section class="bg-darkb">
+				<div class="container">
+					<div class="row">
+						<div class="col-4">
+							1
+						</div>
+						<div class="col-4">
+							2
+						</div>
+						<div class="col-4">
+							3
+						</div>
+					</div>
+				</div>
+			</section>
+			<footer class="container">
+				<div class="row">
+					<div class="col-12">
+						footer
+					</div>
+				</div>
+			</footer>
 	</div>
 </body>
 </html>
