--- a/index.html
+++ b/index.html
@@ -11,62 +11,62 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-	< class="container-fluid">
-		<header class="row ">
-			<nav class="nav-bg">
-				<div class="container d-flex">
-					<div class="col-11 col-sm-6"> 
-						<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
+	<div class="container-fluid">
+			<header class="row ">
+				<nav class="nav-bg">
+					<div class="container d-flex">
+						<div class="col-11 col-sm-6"> 
+							<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
+						</div>
+						<div class="burger__wraper col-1">
+							<div class="burger d-sm-none d-flex justify-content-end"></div>
+						</div>
+						<div class="d-none d-sm-flex col-sm-6">
+							<ul class="row">
+								<li class="col-4">Content</li>
+								<li class="col-4">Content</li>
+								<li class="col-4">Content</li>
+							</ul>
+						</div>
 					</div>
-					<div class="burger__wraper col-1">
-						<div class="burger d-sm-none d-flex justify-content-end"></div>
-					</div>
-					<div class="d-none d-sm-flex col-sm-6">
-						<ul class="row">
-							<li class="col-4">Content</li>
-							<li class="col-4">Content</li>
-							<li class="col-4">Content</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
-		</header>
-		<section class="row">
-			<div class="bg-banner">
-				<div class="container d-flex flex-column  align-items-center my-4">
-					<div class="img-test"></div>
-					<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
-					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
+				</nav>
+			</header>
+			<section class="row">
+				<div class="bg-banner">
+					<div class="container d-flex flex-column  align-items-center my-4">
+						<div class="img-test"></div>
+						<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
+						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+						<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
 				
+					</div>
 				</div>
-			</div>
-		</section>
-		<main class="row">
-			<div class="container d-flex flex-wrap  justify-content-center  my-4">
-				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+			</section>
+			<main class="row">
+				<div class="container d-flex flex-wrap  justify-content-center  my-4">
+					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
 			
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
+					<div class="col-12 col-sm-6 col-md-4 pt-2">
+						<div class="img-test2"></div>
+					</div>
 				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-			</div>
-		</main>
+			</main>
 			<section class="row">
 				<div class="bg-banner">
 					<div class="container">
@@ -101,13 +101,18 @@
 					</div>
 				</div>
 			</section>
-			<footer class="container">
-				<div class="row">
-					<div class="col-12">
-						footer
-					</div>
-				</div>
+		</div>	
+			<footer class="footer">
+				<div class="bg-fot">
+					<div class="container">
+						<div class=" row text-center p-2">
+							<div class="col-12">
+								footer
+							</div>
+						</div>
+					</div>	
+				</div>	
 			</footer>
-	</div>
+		
 </body>
 </html>
