--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
-			<header class="row ">
+	
+			<header>
 				<nav class="nav-bg">
-					<div class="container d-flex">
-						<div class="col-11 col-sm-6"> 
+					<div class="container d-flex justify-content-between ">
+						<div class="col-8 col-sm-6 "> 
 							<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
 						</div>
-						<div class="burger__wraper col-1">
-							<div class="burger d-sm-none d-flex justify-content-end"></div>
+						<div class="burger__wraper d-sm-none d-flex">
+							<div class="burger d-sm-none "></div>
 						</div>
-						<div class="d-none d-sm-flex col-sm-6">
+						<div class="d-none d-sm-flex col-sm-6 justify-content-end   ">
 							<ul class="row">
-								<li class="col-4">Content</li>
-								<li class="col-4">Content</li>
-								<li class="col-4">Content</li>
+								<li class="col-4">Portfolio</li>
+								<li class="col-4">About</li>
+								<li class="col-4">Contact</li>
 							</ul>
 						</div>
 					</div>
 				</nav>
 			</header>
-			<section class="row">
+			<section>
 				<div class="bg-banner">
 					<div class="container d-flex flex-column  align-items-center my-4">
 						<div class="img-test"></div>
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 			</section>
-			<main class="row">
+			<main>
 				<div class="container d-flex flex-wrap  justify-content-center  my-4">
 					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
 					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 			</main>
-			<section class="row">
+			<section>
 				<div class="bg-banner">
 					<div class="container">
 						<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
@@ -81,10 +81,12 @@
 				</div>
 			</section>
 			<section class="row">
-				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-				<div class="input-test">content</div>
-				<a class="" href="">Download</a>
+				<div class="container">
+					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+					<div class="input-test">content</div>
+					<a class="" href="">Send</a>
+				</div>	
 			</section>
 			<section class="bg-darkb">
 				<div class="container">
@@ -101,7 +103,6 @@
 					</div>
 				</div>
 			</section>
-		</div>	
 			<footer class="footer">
 				<div class="bg-fot">
 					<div class="container">
