--- a/index.html
+++ b/index.html
@@ -11,109 +11,119 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-	
-			<header>
-				<nav class="nav-bg">
-					<div class="container d-flex justify-content-between ">
-						<div class="col-8 col-sm-6 "> 
-							<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
-						</div>
-						<div class="burger__wraper d-sm-none d-flex">
-							<div class="burger d-sm-none "></div>
-						</div>
-						<div class="d-none d-sm-flex col-sm-6 justify-content-end   ">
-							<ul class="row">
-								<li class="col-4">Portfolio</li>
-								<li class="col-4">About</li>
-								<li class="col-4">Contact</li>
-							</ul>
-						</div>
+	<header class="header">
+		<nav class="nav-bg">
+			<div class="container">
+				<div class="row">
+					<div class="col-11 col-sm-6"> 
+						<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
 					</div>
-				</nav>
-			</header>
-			<section>
-				<div class="bg-banner">
-					<div class="container d-flex flex-column  align-items-center my-4">
-						<div class="img-test"></div>
-						<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
-						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-						<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
-				
+					<div class="burger__wraper d-sm-none col-1">
+						<div class="burger d-flex justify-content-end"></div>
+					</div>
+					<div class="d-none d-sm-flex col-sm-6">
+						<ul class="row">
+							<li class="col-4">Content</li>
+							<li class="col-4">Content</li>
+							<li class="col-4">Content</li>
+						</ul>
 					</div>
 				</div>
-			</section>
-			<main>
-				<div class="container d-flex flex-wrap  justify-content-center  my-4">
-					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+			</div>
+		</nav>
+	</header>
+	<section class="banner">
+		<div class="bg-banner">
+			<div class="container d-flex flex-column  align-items-center my-4">
+				<div class="row">
+					<div class="img-test"></div>
+					<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
 					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<main class="portfolio">
+		<div class="container d-flex flex-wrap  justify-content-center  my-4">
+			<div class="row">
 			
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
-					<div class="col-12 col-sm-6 col-md-4 pt-2">
-						<div class="img-test2"></div>
-					</div>
+				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+	
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
 				</div>
-			</main>
-			<section>
-				<div class="bg-banner">
-					<div class="container">
-						<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-						<div class="row">
-							<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptate quas, quos laboriosam dolor qui ad esse rem id, nihil voluptatum, a expedita dicta ratione consectetur doloremque vitae eius autem? </div>
-							<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
-						</div>
-						<a class="d-flex justify-content-center" href="">Download</a>
-					</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
 				</div>
-			</section>
-			<section class="row">
-				<div class="container">
-					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-					<div class="input-test">content</div>
-					<a class="" href="">Send</a>
-				</div>	
-			</section>
-			<section class="bg-darkb">
-				<div class="container">
-					<div class="row">
-						<div class="col-4">
-							1
-						</div>
-						<div class="col-4">
-							2
-						</div>
-						<div class="col-4">
-							3
-						</div>
-					</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
 				</div>
-			</section>
-			<footer class="footer">
-				<div class="bg-fot">
-					<div class="container">
-						<div class=" row text-center p-2">
-							<div class="col-12">
-								footer
-							</div>
-						</div>
-					</div>	
-				</div>	
-			</footer>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+				<div class="col-12 col-sm-6 col-md-4 pt-2">
+					<div class="img-test2"></div>
+				</div>
+			</div>
+		</div>
+	</main>
+	<section>
 		
+		<div class="bg-banner">
+			<div class="container">
+				<div class="row">
+					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+					<div class="row">
+						<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptate quas, quos laboriosam dolor qui ad esse rem id, nihil voluptatum, a expedita dicta ratione consectetur doloremque vitae eius autem? </div>
+						<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
+					</div>	
+				</div>
+				<button type="button" class="btn btn-outline-light">Light</button>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<div class="row">
+				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
+				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+				<div class="input-test">content</div>
+				<a class="" href="">Download</a>
+			</div>
+		
+		</div>
+	</section>
+	<section class="bg-darkb">
+		<div class="container">
+			<div class="row">
+				<div class="col-4">
+					1
+				</div>
+				<div class="col-4">
+					2
+				</div>
+				<div class="col-4">
+					3
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer">
+		<div class="bg-fot">
+			<div class="container">
+				<div class=" row text-center p-2">
+					<div class="col-12">
+						footer
+					</div>
+				</div>
+			</div>	
+		</div>	
+	</footer>
 </body>
 </html>
