--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
 </head>
 <body>
 	<header class="header">
@@ -38,7 +39,7 @@
 				<div class="row">
 					<div class="img-test"></div>
 					<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
-					<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
+					<div class=" banner-line col-12 test mt-1 text-center text-uppercase"> <i class="fas fa-star"></i> </div>
 					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
 				</div>
 			</div>
