add header, banner, portfolio, about,

--- a/index.html
+++ b/index.html
@@ -13,34 +13,36 @@
 </head>
 <body>
 	<header class="header">
-		<nav class="nav-bg">
-			<div class="container">
-				<div class="row">
-					<div class="col-11 col-sm-6"> 
-						<h4 class="font-weight-bold text-uppercase"> Start Bootstrap</h4>
-					</div>
-					<div class="burger__wraper d-sm-none col-1">
-						<div class="burger d-flex justify-content-end"></div>
-					</div>
-					<div class="d-none d-sm-flex col-sm-6">
-						<ul class="row">
-							<li class="col-4">Content</li>
-							<li class="col-4">Content</li>
-							<li class="col-4">Content</li>
-						</ul>
-					</div>
+		<nav class="navbar navbar-expand-lg navbar-light mm-bg-dark py-3 text-uppercase  ">
+			<div class="container-fluid">
+				<a class="navbar-brand text-white fw-bold" href="#">Start Bootstrap</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+						<li class="nav-item ">
+							<a class="nav-link text-white" href="#">Portfolio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">About</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-white" href="#">Contact</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
 	<section class="banner">
-		<div class="bg-banner">
-			<div class="container d-flex flex-column  align-items-center my-4">
-				<div class="row">
-					<div class="img-test"></div>
-					<h1 class="col-12 test mt-3 text-center text-uppercase">Start Bootstrap</h1>
-					<div class=" banner-line col-12 test mt-1 text-center text-uppercase"> <i class="fas fa-star"></i> </div>
-					<div class="col-12 test mt-1 text-center text-uppercase">SUBTITLE</div>
+		<div class="mm-bg-light py-5">
+			<div class="container d-flex flex-column  align-items-center ">
+				<img class="mm-img" src="./img/avatar.svg" alt="avatar">
+				<div class="row text-white">
+					<h1 class="col-12  my-4 fw-bold text-center text-uppercase">Start Bootstrap</h1>
+					<div class=" col-12 divider-line text-center "> <i class=" fas fa-star"></i> </div>
+					<div class="col-12  mt-1 text-center text-uppercase">GRaphic Artist - Web Designer - Illustrator</div>
 				</div>
 			</div>
 		</div>
@@ -48,54 +50,66 @@
 	<main class="portfolio">
 		<div class="container d-flex flex-wrap  justify-content-center  my-4">
 			<div class="row">
-			
-				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-	
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
+				<h3 class="col-12 fw-semi-bold text-center text-uppercase">Portfolio</h3>
+				<div class=" col-12 my-2 divider-line-black text-center "> <i class=" fas fa-star"></i> </div>
+				<div class="col-12 w-30 col-sm-6  col-md-4 pt-2">
+					<img class="mm-img-portfolio" src="./img/cabin.png" alt="">
+				</div>
+				<div class="col-12 w-30 col-sm-6  col-md-4 pt-2">
+					<img class="mm-img-portfolio" src="./img/cake.png" alt="">
+				</div>
+				<div class="col-12 w-30 col-sm-6  col-md-4 pt-2">
+					<img class="mm-img-portfolio" src="./img/circus.png" alt="">
 				</div>
 				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
+					<img class="mm-img-portfolio" src="./img/game.png" alt="">
 				</div>
 				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
+					<img class="mm-img-portfolio" src="./img/safe.png" alt="">
 				</div>
 				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
-				</div>
-				<div class="col-12 col-sm-6 col-md-4 pt-2">
-					<div class="img-test2"></div>
+					<img class="mm-img-portfolio" src="./img/submarine.png" alt="">
 				</div>
 			</div>
 		</div>
 	</main>
 	<section>
 		
-		<div class="bg-banner">
+		<div class="mm-bg-light">
 			<div class="container">
-				<div class="row">
-					<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-						<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-					<div class="row">
-						<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptate quas, quos laboriosam dolor qui ad esse rem id, nihil voluptatum, a expedita dicta ratione consectetur doloremque vitae eius autem? </div>
-						<div class="col-12 col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
-					</div>	
+				<div class="row text-white">
+					<h3 class="col-12  mt-5 text-center text-uppercase">About</h3>
+					<div class=" col-12 divider-line text-center "> <i class=" fas fa-star"></i> </div>
+					<div class="row px-5 mt-2 justify-content-center">
+						<div class=" col-12 px-4  col-sm-6"> Lorem ipsum dolffor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
+						<div class="col-12 px-4  mt-4 mt-sm-0   col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
+					</div>
 				</div>
-				<button type="button" class="btn btn-outline-light">Light</button>
+				<div class="d-flex justify-content-center py-5 ">
+					<button type="button" class="  btn btn-outline-light"><i class="fas fa-download"></i> Download</button>
+				</div>
 			</div>
+			
 		</div>
 	</section>
 	<section>
 		<div class="container">
 			<div class="row">
-				<h3 class="col-12 test mt-5 text-center text-uppercase">Portfolio</h3>
-				<div class="col-12 test mt-1 text-center text-uppercase">LINE</div>
-				<div class="input-test">content</div>
-				<a class="" href="">Download</a>
+				<h3 class="col-12  mt-5 text-center text-uppercase">Contact Me</h3>
+				<div class=" col-12 my-2 divider-line-black text-center "> <i class=" fas fa-star"></i> </div>
+			
+				<div class="input-group mb-3">
+					<input type="text" class="form-control mm-form" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
+				</div>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control mm-form" placeholder="Email Address" aria-label="Recipient's username" aria-describedby="basic-addon2">
+				</div>
+				<div class="input-group mb-3">
+					<input type="text" class="form-control mm-form" placeholder="Phone Number" aria-label="Recipient's username" aria-describedby="basic-addon2">
+				</div>
+				<div class="input-group">
+					<textarea class="form-control mm-form" placeholder="Message" aria-label="With textarea"></textarea>
+				</div>	
 			</div>
 		
 		</div>
