--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
 				</div>
 				<div class="input-group">
 					<textarea class="form-control mm-form" placeholder="Message" aria-label="With textarea"></textarea>
-				</div>	
+				</div>
 			</div>
-		
+			<div class=" button-inner py-3 ">
+				<input class="btn  mm-btn"  type="submit" value="Send">
+			</div>
 		</div>
 	</section>
 	<section class="bg-darkb">
