--- a/index.html
+++ b/index.html
@@ -116,17 +116,33 @@
 			</div>
 		</div>
 	</section>
-	<section class="bg-darkb">
+	<section class="mm-bg-dark-blue pt-5 pb-4" >
 		<div class="container">
 			<div class="row">
-				<div class="col-4">
-					1
+				<div class="col">
+					<div class="row text-center text-white">
+						<div class="col-12 text-uppercase ">location</div>
+						<div class="col-12 ">2215 Jhon Daniel Clark, MO</div>
+						<div class="col-12 ">54243</div>
+					</div>
 				</div>
-				<div class="col-4">
-					2
+				<div class="col">
+					<div class="row text-center text-white">
+						<div class="col-12 text-uppercase ">Around the Web</div>
+						<div class="col-12 ">
+							<i class="mm-circle me-1 fab fa-facebook-f"></i>
+							<i class="mm-circle me-1 fab fa-google-plus-g"></i>
+							<i class="mm-circle me-1 fab fa-twitter"></i>
+							<i class="mm-circle fab fa-linkedin-in"></i>
+						</div>
+
+					</div>
 				</div>
-				<div class="col-4">
-					3
+				<div class="col text-center text-white">
+					<div class="col-12 text-uppercase ">About Freelancer</div>
+					<p class="">Freelance is a free to use, open source Bootstrap theme created by 
+						<a class="mm-light  text-decoration-none " href="">Start Bootstrap</a>
+					</p>
 				</div>
 			</div>
 		</div>
