--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
 	</section>
 	<section class="mm-bg-dark-blue pt-5 pb-4" >
 		<div class="container">
-			<div class="row">
-				<div class="col">
+			<div class="row ">
+				<div class="col-12 col-sm">
 					<div class="row text-center text-white">
 						<div class="col-12 text-uppercase ">location</div>
 						<div class="col-12 ">2215 Jhon Daniel Clark, MO</div>
 						<div class="col-12 ">54243</div>
 					</div>
 				</div>
-				<div class="col">
+				<div class="col-12 col-sm my-4">
 					<div class="row text-center text-white">
 						<div class="col-12 text-uppercase ">Around the Web</div>
 						<div class="col-12 ">
@@ -138,9 +138,9 @@
 
 					</div>
 				</div>
-				<div class="col text-center text-white">
+				<div class="col-12 col-sm text-center text-white">
 					<div class="col-12 text-uppercase ">About Freelancer</div>
-					<p class="">Freelance is a free to use, open source Bootstrap theme created by 
+					<p class="px-5 px-sm-0">Freelance is a free to use, open source Bootstrap theme created by 
 						<a class="mm-light  text-decoration-none " href="">Start Bootstrap</a>
 					</p>
 				</div>
@@ -148,11 +148,11 @@
 		</div>
 	</section>
 	<footer class="footer">
-		<div class="bg-fot">
+		<div class="mm-bg-dark">
 			<div class="container">
-				<div class=" row text-center p-2">
-					<div class="col-12">
-						footer
+				<div class=" row text-center p-5">
+					<div class="col-12 text-white">
+						Copyright &copy; Your Website 2019
 					</div>
 				</div>
 			</div>	
