--- a/index.html
+++ b/index.html
@@ -39,21 +39,22 @@
 		<div class="mm-bg-light py-5">
 			<div class="container d-flex flex-column  align-items-center ">
 				<img class="mm-img" src="./img/avatar.svg" alt="avatar">
-				<div class="row text-white">
+				<div class=" text-white d-flex flex-wrap  justify-content-center ">
 					<h1 class="col-12  my-4 fw-bold text-center text-uppercase">Start Bootstrap</h1>
-					<div class=" col-12 divider-line text-center "> <i class=" fas fa-star"></i> </div>
-					<div class="col-12  mt-1 text-center text-uppercase">GRaphic Artist - Web Designer - Illustrator</div>
+					<div class=" mm-banner-line-light col-12 test mt-1 text-center text-uppercase"> <i class="mm-fa-star-light-green fas fa-star"></i> </div>
+					<h5 class="col-12  mt-1 text-center text-uppercase mt-3">GRaphic Artist - Web Designer - Illustrator</h5>
 				</div>
 			</div>
 		</div>
 	</section>
 	<main class="portfolio">
 		<div class="container d-flex flex-wrap  justify-content-center  my-4">
+			<h3 class="col-12 fw-semi-bold text-center text-uppercase">Portfolio</h3>
+			<div class=" mm-banner-line-dark col-12 test mt-1 text-center text-uppercase"> <i class=" mm-fa-star-light fas fa-star"></i> </div>
 			<div class="row">
-				<h3 class="col-12 fw-semi-bold text-center text-uppercase">Portfolio</h3>
-				<div class=" col-12 my-2 divider-line-black text-center "> <i class=" fas fa-star"></i> </div>
 				<div class="col-12 w-30 col-sm-6  col-md-4 pt-2">
 					<img class="mm-img-portfolio" src="./img/cabin.png" alt="">
+					<div class="img-hover"><i class="fas fa-plus"></i></div>
 				</div>
 				<div class="col-12 w-30 col-sm-6  col-md-4 pt-2">
 					<img class="mm-img-portfolio" src="./img/cake.png" alt="">
@@ -75,15 +76,15 @@
 	</main>
 	<section>
 		
-		<div class="mm-bg-light">
+		<div class="mm-bg-light ">
+			<div class="d-flex justify-content-center flex-wrap">
+				<h3 class="col-12 fw-semi-bold text-center text-white text-uppercase">About</h3>
+				<div class=" mm-banner-line-light col-12 test mt-1 text-center text-uppercase"> <i class="text-white mm-fa-star-light-green fas fa-star"></i> </div>
+			</div>
 			<div class="container">
-				<div class="row text-white">
-					<h3 class="col-12  mt-5 text-center text-uppercase">About</h3>
-					<div class=" col-12 divider-line text-center "> <i class=" fas fa-star"></i> </div>
-					<div class="row px-5 mt-2 justify-content-center">
-						<div class=" col-12 px-4  col-sm-6"> Lorem ipsum dolffor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
-						<div class="col-12 px-4  mt-4 mt-sm-0   col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
-					</div>
+				<div class="row px-5 mt-2 justify-content-center">
+					<div class=" col-12 px-4  col-sm-6"> Lorem ipsum dolffor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
+					<div class="col-12 px-4  mt-4 mt-sm-0   col-sm-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et excepturi, ratione, non facere eaque architecto labore minima iure ad quisquam aspernatur sequi autem hic reiciendis voluptatum voluptate. Officiis, a tempore? </div>
 				</div>
 				<div class="d-flex justify-content-center py-5 ">
 					<button type="button" class="  btn btn-outline-light"><i class="fas fa-download"></i> Download</button>
@@ -92,12 +93,13 @@
 			
 		</div>
 	</section>
-	<section>
+	<section class="mm-form-wraper">
 		<div class="container">
+			<div class="d-flex justify-content-center flex-wrap py-3">
+				<h3 class="col-12 fw-semi-bold text-center text-uppercase">Contact Me</h3>
+				<div class=" mm-banner-line-dark col-12 test mt-1 text-center text-uppercase"> <i class=" mm-fa-star-light fas fa-star"></i> </div>
+			</div>
 			<div class="row">
-				<h3 class="col-12  mt-5 text-center text-uppercase">Contact Me</h3>
-				<div class=" col-12 my-2 divider-line-black text-center "> <i class=" fas fa-star"></i> </div>
-			
 				<div class="input-group mb-3">
 					<input type="text" class="form-control mm-form" placeholder="Name" aria-label="Recipient's username" aria-describedby="basic-addon2">
 				</div>
@@ -126,8 +128,8 @@
 						<div class="col-12 ">54243</div>
 					</div>
 				</div>
-				<div class="col-12 col-sm my-4">
-					<div class="row text-center text-white">
+				<div class="col-12 col-sm">
+					<div class="row text-center my-4 my-sm-0 text-white">
 						<div class="col-12 text-uppercase ">Around the Web</div>
 						<div class="col-12 ">
 							<i class="mm-circle me-1 fab fa-facebook-f"></i>
